--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "publish": "git add . && git commit -m \"Update\" && git push && npm run deploy"
   },
   "eslintConfig": {
     "extends": [
